# ScratchAI

./: .gitignore  README.md
Application/: CMakeLists.txt  example_block.json
Application/include/: File.hpp  Font.hpp  Image.hpp  Keyboard.hpp  MainLoop.hpp  Mouse.hpp  Rect.hpp  RenderBox.hpp  RenderWindow.hpp  TextInput.hpp  Texture.hpp  Vector2.hpp
Application/include/GUI/: Edit.hpp
Application/src/: File.cpp  Font.cpp  Image.cpp  Keyboard.cpp  MainLoop.cpp  Mouse.cpp  RenderBox.cpp  RenderWindow.cpp  TextInput.cpp  Texture.cpp  main.cpp
datasets/: test-ai.ipynb
datasets/country-flags-main/: scale_images.ipynb
